package com.example.demo;

import java.util.List;
import java.util.Scanner;

public class Main {

    public static void main(String[] args) {
    //ss
    }
}
