package main.java;

public enum HelpCategory {
    LAUNDRY,       // Tøjvask
    ELECTRONICS,   // Køleskab/fryser, strøm osv.
    CLEANING       // Rengøringsrutine
}
