@startuml
skinparam classAttributeIconSize 0

' =====================
' Core Application
' =====================
class Main
class TwoFeetApp

Main --> TwoFeetApp : starts

' =====================
' Controllers
' =====================
class LoginController
class RegisterController
class MainPageController
class FrontPageController
class BudgetController
class TodoController
class HelpPageController
class MovedOutChecklistController
class MovedOutDetailController

' Navigation relations
LoginController --> MainPageController
RegisterController --> LoginController
MainPageController --> BudgetController
MainPageController --> TodoController
MainPageController --> HelpPageController
MainPageController --> FrontPageController

' =====================
' Database / Persistence
' =====================
class DBConnector
class DbManager

DBConnector --> DbManager : provides connection
DbManager --> User
DbManager --> Budget
DbManager --> BudgetPlan
DbManager --> FixedExpense
DbManager --> Task
DbManager --> HelpTopic
DbManager --> HelpCategory

' =====================
' Domain / Models
' =====================
class User {
  id
  username
  email
}

class Budget {
  amount
  balanceAfter
  type
  timestamp
}

class BudgetPlan {
  periodType
  income
  savings
  totalFixed
  days
  dailyBudget
}

class FixedExpense {
  name
  amount
}

class Task {
  taskId
  task
}

class HelpTopic {
  title
  content
}

class HelpCategory {
  name
}

' =====================
' Services
' =====================
class HelpService

HelpService --> HelpTopic
HelpService --> HelpCategory
HelpPageController --> HelpService

' =====================
' Relationships
' =====================
User "1" --> "many" Budget
User "1" --> "many" Task
User "1" --> "many" BudgetPlan

BudgetPlan "1" --> "many" FixedExpense
HelpCategory "1" --> "many" HelpTopic

BudgetController --> DbManager
TodoController --> DbManager
LoginController --> DbManager
RegisterController --> DbManager

@enduml
